Fixed bug on firefox on the nav height

--- a/src/assets/scss/modules/_nav.scss
+++ b/src/assets/scss/modules/_nav.scss
@@ -12,7 +12,8 @@
 	transition: 0.1s ease-in-out;
 	@include slideDownCollapsed(0.5s);
 	@include medium-and-up {
-		max-height: 97px;
+		height: 97px;
+		max-height: 100%;
 		display: block;
 		float: right;
 		.is-minified & {
